# iauto

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
dados/: vaga_exemplo.json
iauto/: __init__.py
iauto/api/: __init__.py  __main__.py  app.py  contexto.py  esquemas.py  rotas_pipeline.py  rotas_sessao.py
iauto/cli/: __init__.py  __main__.py  audio_io.py  main.py
iauto/dominio/: __init__.py  analise.py  modelos.py  relatorio.py  roteiro.py
iauto/servicos/: __init__.py  analise_llm.py  transcricao.py  tts.py
iauto_prototipo/: README.md  analise.py  analise_llm.py  api_pipeline.py  audio_io.py  main.py  relatorio.py  requirements.txt  roteiro.py  servidor.py  transcricao.py
iauto_prototipo/dados/: candidato_exemplo.json
iauto_prototipo/web/: index.html
saida_exemplo/: relatorio.json  relatorio.md
tests/: conftest.py  test_analise.py  test_analise_llm.py  test_api.py  test_relatorio.py  test_roteiro.py  test_transcricao.py
